# dconf2nix

./: .gitignore  CHANGELOG.md  README.md  ci.nix  dconf2nix.cabal  default.nix  hie.yaml  pkgs.nix  shell.nix
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml
app/: Main.hs
data/: clocks.settings  custom.settings  dconf.easy  dconf.settings  dconf.settings2  dict.settings  emoji.settings  escaped-quotes.settings  headers.settings  json.settings  keybindings.settings  negative.settings  numbers.settings  quotes.settings  root.settings  scientific-notation.settings  tuples.settings  typed.settings  unicode.settings
nix/: ci.nix  ghc-version.nix  pkgs.nix  toc.nix
npins/: sources.json
output/: clocks.nix  custom.nix  dconf.nix  emoji.nix  escaped-quotes.nix  headers.nix  indexer.nix  json.nix  keybindings.nix  negative.nix  nested.nix  numbers.nix  quotes.nix  root.nix  scientific-notation.nix  tuples.nix  typed.nix  unicode.nix  variant.nix
src/: CommandLine.hs  DConf.hs  DConf2Nix.hs  DConfParser.hs  Domain.hs  Lib.hs  Nix.hs
src/DConf/: Data.hs
test/: DConf2NixTest.hs  DConfTest.hs  Main.hs
test/data/: bytestring.settings  headers.settings  indexer.settings  json.settings  strings.settings  typed.settings  variant.settings
test/output/: bytestring-nixos.nix  bytestring.nix  clocks-nixos.nix  custom-nixos.nix  custom.nix  dict-nixos.nix  dict.nix  dump-nixos.nix  dump.nix  emoji-nixos.nix  emoji.nix  headers-nixos.nix  indexer-nixos.nix  indexer.nix  json-nixos.nix  json.nix  keybindings-nixos.nix  keybindings.nix  nested-nixos.nix  nested.nix  numbers-nixos.nix  numbers.nix  quotes.nix  scientific-notation-nixos.nix  scientific-notation.nix  strings-nixos.nix  strings.nix  tuples-nixos.nix  tuples.nix  typed-nixos.nix  typed.nix  unicode-nixos.nix  variant-nixos.nix  variant.nix
