cabal-version:       2.4

name:                dconf2nix
version:             0.0.4
synopsis:            Convert dconf files to Nix, as expected by Home Manager.
description:         A convenient converter of DConf files to Nix, as expected by Home Manager's dconf settings. So you can Nixify your Gnome Shell configuration ;)
bug-reports:         https://github.com/gvolpe/dconf2nix/issues
-- license:
license-file:        LICENSE
author:              gvolpe
maintainer:          volpegabriel@gmail.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     CommandLine
                     , DConf
                     , DConf.Data
                     , DConf2Nix
                     , Nix
  build-depends:       base
                     , containers
                     , optparse-applicative
                     , parsec
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010

executable dconf2nix
  main-is:             Main.hs
  build-depends:       base
                     , dconf2nix
  hs-source-dirs:      app
  default-language:    Haskell2010
