cabal-version:       2.4

name:                dconf2nix
version:             0.0.12
synopsis:            Convert dconf files to Nix, as expected by Home Manager.
description:         A convenient converter of DConf files to Nix, as expected by Home Manager's dconf settings. So you can Nixify your Gnome Shell configuration ;)
bug-reports:         https://github.com/gvolpe/dconf2nix/issues
license:             Apache-2.0
license-file:        LICENSE
author:              gvolpe
maintainer:          volpegabriel@gmail.com
build-type:          Simple
extra-source-files:  README.md

library
  exposed-modules:     CommandLine
                     , DConf
                     , DConf.Data
                     , DConf2Nix
                     , Nix
  other-modules:       Paths_dconf2nix
  build-depends:       base
                     , containers
                     , emojis
                     , optparse-applicative
                     , parsec
                     , text
  hs-source-dirs:      src
  default-language:    Haskell2010

test-Suite dconf2nix-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       DConfTest
                     , DConf2NixTest
  build-depends:       base
                     , containers
                     , dconf2nix
                     , hedgehog
                     , parsec
                     , template-haskell
                     , text
  default-language:     Haskell2010
  ghc-options:         -Wall -threaded -with-rtsopts -N

executable dconf2nix
  main-is:             Main.hs
  build-depends:       base
                     , dconf2nix
  hs-source-dirs:      app
  default-language:    Haskell2010
